--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<% layout('layout') %>
+
+<div class="jumbotron text-center">
+    <h1><span class="fa fa-lock"></span> Authentication</h1>
+
+    <p>Login or Register with :</p>
+    <a href="/auth/login" class="btn btn-default">
+        <span class="fa fa-user"></span> Login
+    </a>
+    <a href="/auth/signup" class="btn btn-default">
+        <span class="fa fa-user"></span>  Signup
+    </a>
+</div>
