--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,17 +5,14 @@
         <form class="form-signin" action="/auth/login" method="post">
             <h2 class="form-signin-heading"><span class="fa fa-sign-in"></span> Login</h2>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Your email address" required autofocus>
+            <input name="email" type="text" id="inputEmail" class="form-control" placeholder="Your email address" autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Your password" required>
+            <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Your password">
             <br />
             <button class="btn btn-lg btn-success" type="submit">Login</button>
         </form>
         <br />
         Need an account ? <a href="/auth/signup"><span class="fa fa-user"></span> Signup</a><br />
         Or go <a href="/auth"><span class="fa fa-home"></span> home</a>
-
-
     </div>
-
 </div>
