--- a/views/secured/dashboard.ejs
+++ b/views/secured/dashboard.ejs
@@ -4,3 +4,9 @@
   <h1><span class="fa fa-tachometer"></span> Dashboard</h1>
   <a href="/auth/logout" class="btn btn-danger btn-sm">Logout</a>
 </div>
+
+<table class="table table-hover">
+  <% for(var i=0; i< data.length; i++) {%>
+     <tr><%= data[i].title %></tr>
+  <% } %>
+</table>
