update hack auth login

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,6 +11,7 @@
             <br />
             <button class="btn btn-lg btn-success" type="submit">Login</button>
         </form>
+        <p><%= msg %></p>
         <br />
         Need an account ? <a href="/auth/signup"><span class="fa fa-user"></span> Signup</a><br />
         Or go <a href="/auth"><span class="fa fa-home"></span> home</a>
