--- a/views/secured/post/add.ejs
+++ b/views/secured/post/add.ejs
@@ -10,7 +10,7 @@
         <form class="form-add-post" action="/add" method="post">
             <h2 class="form-signin-heading"><span class="fa fa-sign-in"></span> Type here</h2>
 
-            <input name="email" type="hidden" class="form-control" value="<%= userid %>">
+            <input name="userId" type="hidden" class="form-control" value="<%= userid %>">
 
             <label for="inputTitle" class="sr-only">Title</label>
             <input name="title" type="text" id="inputTitle" class="form-control" placeholder="Add a title" autofocus>
