--- a/views/secured/dashboard.ejs
+++ b/views/secured/dashboard.ejs
@@ -1,7 +1,7 @@
 <% layout('../layout') %>
 
 <div class="page-header text-center">
-  <h1><span class="fa fa-tachometer"></span> Dashboard</h1>
+  <h1><span class="fa fa-tachometer"></span> Dashboard (<%= first_name %> <%= last_name %>)</h1>
   <a href="/auth/logout" class="btn btn-danger btn-sm">Logout</a>
 </div>
 
